cli/tests/snapshot/inputs/errors/record_type_repeated_field.ncl
# capture = 'stderr'
# command = ['eval']
({foo.bar.baz = "a"} : {foo : String, foo : Number})
